May 28:   5:20 - 7:20 pm (2 hours): Worked on trying to use an actual IDE isntead of repl. Downloaded CLion and tried using DockerDesktop, got into trouble trying to figure out the hyper thing, the virtual machine program thing, and just settled down on using visual studio and copying files over instead of trying to keep using linux containers. It was pretty easy to bring files over because istead of copyign and pasting the content, I just downloaded the revelant files and uploaded them. Found out that the current replit project I was working on wasn't uploading to github for some reason, so I think I have to abandon that specific project and use something different that's actually connected to GitHub. The Windows/Visual Studio Version I'm currently working on is Peace Treaty V1.2

--- a/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
+++ b/Peace Treaty V1.2/Peace Treaty V1.2.vcxproj
@@ -127,7 +127,64 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\Downloads\AllUnits.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\ArmyOverviewMA (1).cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\AttackMA (1).cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\BuildMA.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\CommanderProfile.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\ConstValues.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\LinkedList.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\MapMA.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\Mobility.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\OtherFunctions.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\Participants.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\PlayerAction.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\Provinces.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\ScoutMA.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\showText.cpp" />
+    <ClCompile Include="..\..\..\..\Downloads\TrainMA (19).cpp" />
     <ClCompile Include="Peace Treaty V1.2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\..\Downloads\Help.txt" />
+    <Text Include="..\..\..\..\Downloads\Options.txt" />
+    <Text Include="..\..\..\..\Downloads\Synopsis.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\debugQuickAccess.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\deletedContent.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\headersAllocation.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\needToDo.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\notes.txt.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\1June2022.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\2July2022.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\3August2022.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\4November2022.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\5January2023.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\6February2023.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\7March2023.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\8April2023.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\9May2023.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\projectLogs\logOverview.txt" />
+    <Text Include="..\..\..\..\OneDrive\Desktop\AdministrativeDocs\tips.txt.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\Downloads\README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\Downloads\AllUnits.h" />
+    <ClInclude Include="..\..\..\..\Downloads\ArmyOverviewMA (1).h" />
+    <ClInclude Include="..\..\..\..\Downloads\BuildMA.h" />
+    <ClInclude Include="..\..\..\..\Downloads\CommanderProfile.h" />
+    <ClInclude Include="..\..\..\..\Downloads\ConstValues.h" />
+    <ClInclude Include="..\..\..\..\Downloads\LinkedList.h" />
+    <ClInclude Include="..\..\..\..\Downloads\MapMA.h" />
+    <ClInclude Include="..\..\..\..\Downloads\Mobility.h" />
+    <ClInclude Include="..\..\..\..\Downloads\OtherFunctions.h" />
+    <ClInclude Include="..\..\..\..\Downloads\Participants.h" />
+    <ClInclude Include="..\..\..\..\Downloads\PlayerAction.h" />
+    <ClInclude Include="..\..\..\..\Downloads\Provinces.h" />
+    <ClInclude Include="..\..\..\..\Downloads\ScoutMA.h" />
+    <ClInclude Include="..\..\..\..\Downloads\showText.h" />
+    <ClInclude Include="..\..\..\..\Downloads\TrainMA.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
